@@ -413,6 +413,19 @@ if hasattr(asyncore, 'file_wrapper'):
             w.close()
             self.assertEqual(open(TESTFN, 'rb').read(), self.d + d1 + d2)
 
+        @unittest.skipUnless(hasattr(asyncore, 'file_dispatcher'),
+                             '    asyncore.file_dispatcher required')
+        def test_dispatcher(self):
+            fd = os.open(TESTFN, os.O_RDONLY)
+            data = []
+            class FileDispatcher(asyncore.file_dispatcher):
+                def handle_read(self):
+                    data.append(self.recv(29))
+            s = FileDispatcher(fd)
+            os.close(fd)
+            asyncore.loop(timeout=0.01, use_poll=True, count=2)
+            self.assertEqual(b"".join(data), self.d)
+
 
 def test_main():
     tests = [HelperFunctionTests, DispatcherTests, DispatcherWithSendTests,
